Do not polute rendering collections but keep model data hook working